<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_batch_select_all"
        android:title="@string/select_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_batch_favorite"
        android:icon="@drawable/ic_star_outline_24"
        android:title="@string/batch_add_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_batch_test"
        android:title="@string/batch_test"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_batch_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
</menu>
